tests/rosetta/out/Swift/arithmetic-geometric-mean.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:02Z
func abs(_ x: Double) -> Double {
    if x < 0.0 {
        return -x
    }
    return x
}
func sqrtApprox(_ x: Double) -> Double {
    var guess = x
    var i = 0
    while i < 20 {
        guess = (guess + x / guess) / 2.0
        i = i + 1
    }
    return guess
}
func agm(_ a: Double, _ g: Double) -> Double {
    let eps = 1e-14
    while abs(a - g) > abs(a) * eps {
        let newA = (a + g) / 2.0
        let newG = sqrtApprox(a * g)
        a = newA
        g = newG
    }
    return a
}
func main() {
    print(String(agm(1.0, 1.0 / sqrtApprox(2.0))))
}
main()
